@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
 	<category label="Logins do CopiaDB">
-		<setting id="copiapop-enable" type="bool" label="Activar CopiaPop" default="true"/>
-		<setting id="copiapop-username" type="text" label="Username CopiaPop" default="" visible="!eq(-1,false)"/>
-		<setting id="copiapop-password" type="text" label="Password CopiaPop" default="" option="hidden" visible="!eq(-2,false)"/>
-		<setting id="copiapop-check" type="bool" label="Activar aviso sobre extensões desconhecidas." default="false" visible="false"/>
-		<setting type="sep"/>
 		<setting id="diskokosmiko-enable" type="bool" label="Activar DiskoKosmiko" default="false"/>
 		<setting id="diskokosmiko-username" type="text" label="Username DiskoKosmiko" default="" visible="!eq(-1,false)"/>
 		<setting id="diskokosmiko-password" type="text" label="Password DiskoKosmiko" default="" option="hidden" visible="!eq(-2,false)"/>
